[package]
name = "kywasmtime"
version = "0.1.0"
edition = "2021"
description = "Time utils for WASM"
authors = ["Romain Vimont <rom@rom1v.com>"]
license = "MIT"
repository = "https://github.com/rom1v/kywasmtime"
keywords = ["timer", "wasm", "browser", "sleep", "interval", "timeout"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
