[package]
name = "linera-kywasmtime"
version = "0.1.0"
edition = "2021"
description = "Time utils for WASM (Linera fork)"
authors = ["Romain Vimont <rom@rom1v.com>", "Linera <contact@linera.io>"]
license = "MIT"
repository = "https://github.com/linera-io/kywasmtime"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
